@@ -6,6 +6,8 @@
 * Improve responsiveness with OCR output
 * + 'Ignore duplex capabilities of scanner' preferences option. Closes feature
   request #109 (Retain 'Source Document' options on 'Scan Document' dialog)
+* Fix running post-save hook on filenames with UTF-8.
+  Closes bug #341 (Wrong character encoding at post-save hook)
 
 
 2.6.3 (06.01.2020):
